RESOLVED FIXED297702
Storage access should not be inherited by dedicated workers
https://bugs.webkit.org/show_bug.cgi?id=297702
Summary Storage access should not be inherited by dedicated workers
Charlie Wolfe
Reported 2025-08-20 17:53:56 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-20 17:54:06 PDT
Charlie Wolfe
Comment 2 2025-08-20 17:54:55 PDT
Alexey Proskuryakov
Comment 3 2025-08-22 09:32:47 PDT
*** Bug 297701 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2025-09-17 16:15:35 PDT
Committed 300120@main (8f3d12f42fde): <https://commits.webkit.org/300120@main> Reviewed commits have been landed. Closing PR #49695 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.